Flatten back down to a single module.
Signed-off-by: James R. Perkins <jperkins@redhat.com>